--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --open",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -21,6 +22,7 @@
     "react-simple-code-editor": "^0.14.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -31,8 +33,10 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "peggy": "^4.0.3",
-    "sass": "^1.77.8",
+    "sass": "^1.64.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-plugin-checker": "^0.7.2",
+    "vitest": "^2.0.5"
   }
 }
