--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@uiw/react-split": "^5.9.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "ml-matrix": "^6.11.1",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-simple-code-editor": "^0.14.1"
+    "react-simple-code-editor": "^0.14.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
